syntax = "proto3";

package com.bht.saigonparking.api.grpc.user;
//option java_generic_services = true;
option java_multiple_files = true;
option java_outer_classname = "SaigonParkingUser";

import "google/protobuf/wrappers.proto";

enum UserRole {
    CUSTOMER = 0;
    PARKING_LOT_EMPLOYEE = 1;
    GOVERNMENT_EMPLOYEE = 2;
    ADMIN = 3;
}